feat: update endpoint to retrieve sellers and their products with media preload
